[gd_scene load_steps=13 format=2]

[ext_resource path="res://Enemies/Enemy_medium.png" type="Texture" id=1]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=2]
[ext_resource path="res://Boxes/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/Enemy_medium.gd" type="Script" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 14.0
height = 32.0

[sub_resource type="Animation" id=10]
resource_name = "AttackLeft"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 9, 9, 9, 9, 10, 10, 11 ]
}

[sub_resource type="Animation" id=11]
resource_name = "AttackRight"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 6, 6, 6, 6, 7, 7, 8 ]
}

[sub_resource type="Animation" id=3]
resource_name = "IdleLeft"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 3, 3, 4, 4, 5, 5, 4, 4, 3 ]
}

[sub_resource type="Animation" id=4]
resource_name = "IdleRight"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 0, 1, 1, 2, 2, 1, 1 ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="CapsuleShape2D" id=12]
radius = 16.0
height = 32.0

[sub_resource type="CapsuleShape2D" id=13]
radius = 16.0
height = 32.0

[node name="Enemy_medium" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 4
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/AttackLeft = SubResource( 10 )
anims/AttackRight = SubResource( 11 )
anims/IdleLeft = SubResource( 3 )
anims/IdleRight = SubResource( 4 )
anims/RESET = SubResource( 5 )

[node name="Stats" parent="." instance=ExtResource( 2 )]

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="PlayerDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource( 12 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 1 )
flip_h = true
hframes = 6
vframes = 2

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 2048

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 13 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_PlayerDetector_body_exited"]
[connection signal="area_shape_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_shape_entered"]

[editable path="Hurtbox"]
